--- a/index.html
+++ b/index.html
@@ -1,10 +1,31 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en" data-theme="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <!-- 
+        - #primary meta tags
+     -->
+    <title>Pixstock - A large stock library</title>
+    <meta name="title" content="Pixstock - A large stock library" />
+    <meta title="description" content="This is a stock photos app made by ahmedebrahim" />
+    <!-- 
+    - #google fonts link
+   -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
+    <!-- 
+    - #matrial icon link
+    -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0..1,0"
+    />
   </head>
   <body>
     <div id="root"></div>
